--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Finstagram is a photo sharing app using Parse as its backend.
 
-Time spent: **X** hours spent in total
+Time spent: **** hours spent in total
 
 ## User Stories
 
@@ -50,9 +50,7 @@ Please list two areas of the assignment you'd like to **discuss further with you
 
 Here's a walkthrough of implemented user stories:
 
-<img src='http://i.imgur.com/link/to/your/gif/file.gif' title='Video Walkthrough' width='' alt='Video Walkthrough' />
-
-GIF created with [Kap](https://getkap.co/).
+https://youtu.be/2jHkLV-6q_4
 
 ## Credits
 
