--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Finstagram is a photo sharing app using Parse as its backend.
 
-Time spent: **** hours spent in total
+Time spent: **15** hours spent in total
 
 ## User Stories
 
